--- a/New_Project/Views/Shared/_Layout.cshtml
+++ b/New_Project/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
 
-    @*<script src="~/Scripts/jquery-3.4.1.min.js"></script>*@
+    <script src="~/Scripts/jquery-3.4.1.min.js"></script>
 
 
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
@@ -14,12 +14,13 @@
     <link href="~/Tree JQ/dropdowntree.css" rel="stylesheet" type="text/css">
 
     @*<script src="~/Scripts/bootstrap.min.js"></script>*@
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    @*<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>*@
     <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="~/Tree JQ/dropdowntree.js"></script>
+    @*<script src="~/Tree JQ/dropdowntree.js"></script>*@
     <script src="~/Scripts/modernizr.js"></script>
 
-
+    <link href="~/JS/jquery.treeview.css" rel="stylesheet" />
+    <script src="~/JS/jquery.treeview.js"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
